[gd_scene load_steps=8 format=2]

[ext_resource path="res://themes/darktheme/fonts/Bangers/Bangers-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/wc/menus/OptionsMenu.gd" type="Script" id=2]
[ext_resource path="res://themes/darktheme/fonts/UbuntuFont.res" type="DynamicFont" id=3]
[ext_resource path="res://themes/darktheme/darktheme.theme" type="Theme" id=4]
[ext_resource path="res://assets/other/controls_switch.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 52
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 66
font_data = ExtResource( 1 )

[node name="OptionsMenu" type="Node2D"]
z_index = 4000
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color( 1, 1, 1, 0.866667 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
theme = ExtResource( 4 )

[node name="general" type="MarginContainer" parent="PanelContainer"]
unique_name_in_owner = true
visible = false
margin_left = 2.0
margin_top = 2.0
margin_right = 1918.0
margin_bottom = 1078.0
custom_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/general"]
margin_right = 1896.0
margin_bottom = 1076.0
custom_constants/separation = 26

[node name="Label" type="Label" parent="PanelContainer/general/VBoxContainer"]
margin_right = 1896.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1
valign = 1

[node name="Controls" type="Button" parent="PanelContainer/general/VBoxContainer"]
unique_name_in_owner = true
margin_top = 126.0
margin_right = 1896.0
margin_bottom = 201.0
size_flags_vertical = 10
custom_fonts/font = SubResource( 2 )
text = "Controls"

[node name="GameplayOptionsButton" type="Button" parent="PanelContainer/general/VBoxContainer"]
margin_top = 272.0
margin_right = 1896.0
margin_bottom = 347.0
size_flags_vertical = 10
custom_fonts/font = SubResource( 2 )
text = "Gameplay"

[node name="LoadSave" type="HBoxContainer" parent="PanelContainer/general/VBoxContainer"]
unique_name_in_owner = true
margin_top = 373.0
margin_right = 1896.0
margin_bottom = 493.0
size_flags_vertical = 3
custom_constants/separation = 100

[node name="LoadButton" type="Button" parent="PanelContainer/general/VBoxContainer/LoadSave"]
margin_top = 45.0
margin_right = 898.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 10
custom_fonts/font = SubResource( 2 )
text = "Load"

[node name="SaveButton" type="Button" parent="PanelContainer/general/VBoxContainer/LoadSave"]
margin_left = 998.0
margin_top = 45.0
margin_right = 1896.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 10
custom_fonts/font = SubResource( 2 )
text = "Save"

[node name="DebugContainer" type="HBoxContainer" parent="PanelContainer/general/VBoxContainer"]
unique_name_in_owner = true
margin_top = 519.0
margin_right = 1896.0
margin_bottom = 638.0
size_flags_vertical = 3
custom_constants/separation = 326

[node name="TestsButton" type="Button" parent="PanelContainer/general/VBoxContainer/DebugContainer"]
margin_top = 44.0
margin_right = 414.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 10
custom_fonts/font = SubResource( 2 )
text = "Tests"

[node name="ForceResyncButton" type="Button" parent="PanelContainer/general/VBoxContainer/DebugContainer"]
margin_left = 740.0
margin_top = 44.0
margin_right = 1155.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 10
custom_fonts/font = SubResource( 2 )
text = "FORCE RESYNC"

[node name="DebugButton" type="CheckButton" parent="PanelContainer/general/VBoxContainer/DebugContainer"]
unique_name_in_owner = true
margin_left = 1481.0
margin_right = 1896.0
margin_bottom = 119.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "DEBUG"

[node name="RestartButton" type="Button" parent="PanelContainer/general/VBoxContainer"]
unique_name_in_owner = true
margin_top = 709.0
margin_right = 1896.0
margin_bottom = 784.0
size_flags_vertical = 10
custom_fonts/font = SubResource( 2 )
text = "Restart"

[node name="MainMenuButton" type="Button" parent="PanelContainer/general/VBoxContainer"]
unique_name_in_owner = true
margin_top = 855.0
margin_right = 1896.0
margin_bottom = 930.0
size_flags_vertical = 10
custom_fonts/font = SubResource( 2 )
text = "Main Menu"

[node name="BackButton" type="Button" parent="PanelContainer/general/VBoxContainer"]
unique_name_in_owner = true
margin_top = 1001.0
margin_right = 1896.0
margin_bottom = 1076.0
size_flags_vertical = 10
custom_fonts/font = SubResource( 2 )
text = "CLOSE"

[node name="gameplay" type="MarginContainer" parent="PanelContainer"]
unique_name_in_owner = true
margin_left = 2.0
margin_top = 2.0
margin_right = 1918.0
margin_bottom = 1078.0
custom_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/gameplay"]
margin_right = 1896.0
margin_bottom = 1076.0
custom_constants/separation = 26

[node name="Label" type="Label" parent="PanelContainer/gameplay/VBoxContainer"]
margin_right = 1896.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "gameplay"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/gameplay/VBoxContainer"]
margin_top = 82.0
margin_right = 1896.0
margin_bottom = 122.0

[node name="Label" type="Label" parent="PanelContainer/gameplay/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 139.0
margin_bottom = 35.0
text = "Notifications"

[node name="NotificationsLevel" type="OptionButton" parent="PanelContainer/gameplay/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 142.0
margin_right = 366.0
margin_bottom = 40.0
text = "Noob (very verbose)"
items = [ "Noob (very verbose)", null, false, 0, null, "Normal", null, false, 1, null, "Expert (only show interrupts)", null, false, 2, null, "Debug (show everything)", null, false, 3, null ]
selected = 0

[node name="AdventureMode" type="CheckBox" parent="PanelContainer/gameplay/VBoxContainer"]
unique_name_in_owner = true
margin_top = 148.0
margin_right = 1896.0
margin_bottom = 178.0
text = "Adventure Mode"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/gameplay/VBoxContainer"]
margin_top = 204.0
margin_right = 1896.0
margin_bottom = 234.0

[node name="Label" type="Label" parent="PanelContainer/gameplay/VBoxContainer/HBoxContainer2"]
margin_right = 156.0
margin_bottom = 30.0
text = "Music volume "

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/gameplay/VBoxContainer/HBoxContainer2"]
margin_left = 159.0
margin_right = 509.0
margin_bottom = 30.0

[node name="ColorRect" type="ColorRect" parent="PanelContainer/gameplay/VBoxContainer/HBoxContainer2/CenterContainer"]
margin_right = 350.0
margin_bottom = 30.0
rect_min_size = Vector2( 350, 30 )
color = Color( 0.286275, 0.278431, 0.278431, 1 )

[node name="MusicVol" type="HSlider" parent="PanelContainer/gameplay/VBoxContainer/HBoxContainer2/CenterContainer"]
unique_name_in_owner = true
margin_left = 25.0
margin_top = 8.0
margin_right = 325.0
margin_bottom = 21.0
rect_min_size = Vector2( 300, 10 )
rounded = true

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/gameplay/VBoxContainer"]
margin_top = 260.0
margin_right = 1896.0
margin_bottom = 290.0

[node name="Label" type="Label" parent="PanelContainer/gameplay/VBoxContainer/HBoxContainer3"]
margin_right = 135.0
margin_bottom = 30.0
text = "SFX volume "

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/gameplay/VBoxContainer/HBoxContainer3"]
margin_left = 138.0
margin_right = 488.0
margin_bottom = 30.0

[node name="ColorRect" type="ColorRect" parent="PanelContainer/gameplay/VBoxContainer/HBoxContainer3/CenterContainer"]
margin_right = 350.0
margin_bottom = 30.0
rect_min_size = Vector2( 350, 30 )
color = Color( 0.286275, 0.278431, 0.278431, 1 )

[node name="SfxVol" type="HSlider" parent="PanelContainer/gameplay/VBoxContainer/HBoxContainer3/CenterContainer"]
unique_name_in_owner = true
margin_left = 25.0
margin_top = 8.0
margin_right = 325.0
margin_bottom = 21.0
rect_min_size = Vector2( 300, 10 )
rounded = true

[node name="GameplayBackButton" type="Button" parent="PanelContainer/gameplay/VBoxContainer"]
unique_name_in_owner = true
margin_top = 1001.0
margin_right = 1896.0
margin_bottom = 1076.0
size_flags_vertical = 10
custom_fonts/font = SubResource( 2 )
text = "BACK"

[node name="Overlay" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
margin_left = 2.0
margin_top = 2.0
margin_right = 1898.0
margin_bottom = 1078.0

[node name="OverlayTexture" type="TextureRect" parent="Overlay"]
margin_right = 1896.0
margin_bottom = 1076.0
texture = ExtResource( 5 )
expand = true

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
margin_right = 315.0
margin_bottom = 130.0
rect_min_size = Vector2( 1000, 500 )
access = 1
filters = PoolStringArray( "*.json" )

[connection signal="popup_hide" from="FileDialog" to="." method="_on_FileDialog_popup_hide"]
